# Gaia-Manager

./: .gitignore  Cargo.toml  Dioxus.toml  todo
.github/workflows/: build.yml  build_dev.yml  build_prod.yml
assets/styles/: create_server_panel.scss  dynamic_scaling.scss  main.scss  server_panel.scss  sidebar.scss  theme.scss
src/: app.rs
src/components/: create_server_panel.rs  mod.rs  server_panel.rs  sidebar.rs  titlebar.rs
src/components/svgs/: caret_down.rs  chrome_close.rs  chrome_maximize.rs  chrome_minimize.rs  chrome_restore.rs  folder.rs  gear.rs  mod.rs  play.rs  plus.rs  rotate.rs  skull.rs  stop.rs
tauri/: Cargo.toml  tauri.conf.json
tauri/src/: _icon.json  lib.rs  main.rs
tauri/src/gaia_core/: core_structs.rs  mod.rs
