[package]
name = "gaia-manager"
edition = "2024"
authors = ["dip-land <82669765+dip-land@users.noreply.github.com>"]
version = "0.1.0"

[dependencies]
dioxus = { version = "0.7" }
dioxus-logger = "0.7"
rand = "0.9.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
# This is so wasm works correctly when rand is installed
getrandom = { version = "0.3.4", features = ["wasm_js"] }
uuid = { version = "1.18.1", features = ["rng-rand", "v4"] }

[workspace]
members = ["tauri"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
